extracted_vulnerabilities/pair_215262_486796/fixed_report.txt
extracted_vulnerabilities/pair_215262_486796/cadence_gem_fixed.c:27:40: error: There is an unknown macro here somewhere. Configuration is required. If HWADDR_PRIx is a macro then please configure it. [unknownMacro]
        DB_PRINT("read descriptor 0x%" HWADDR_PRIx "\n", packet_desc_addr);
                                       ^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

